--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -9,11 +9,30 @@
 <div class="container body-content">
 
     <!-- // TODO #2 - display the job fields, one per row -->
-    <table th:replace="list-jobs :: single-job">
-
-
-    </table>
-
+    <div  th:each="jobTrait : ${job}">
+        <table  th:fragment="single-job" class="job-listing">
+            <tr>
+                <th>Name</th>
+                <td th:text="${jobTrait.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer</th>
+                <td th:text="${jobTrait.employer}"></td>
+            </tr>
+            <tr>
+                <th>Location</th>
+                <td th:text="${jobTrait.location}"></td>
+            </tr>
+            <tr>
+                <th>Position Type</th>
+                <td th:text="${jobTrait.positionType}"></td>
+            </tr>
+            <tr>
+                <th>Skill</th>
+                <td th:text="${jobTrait.coreCompetency}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 
 </body>
